--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,12 @@ services:
         UPSTREAM_VERSION: v0.15.0
         NIMBUS_VERSION: v23.3.2
         TEKU_VERSION: 23.4.0
-    image: 'obol.avado.dappnode.eth:0.0.2'
+    image: 'obol.avado.dappnode.eth:0.0.3'
     restart: always
     volumes:
       - 'data:/data'
+    environment:
+      - NETWORK=mainnet
     ports:
       - '3610:3610'
       - '9999:9999'
